Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.2.0 RC1, 5.6
-
None
-
Qt 5.2.0RC1+ WINDOWS 7 64 bit sp1+ msvc2012 update 3,
Linux
-
98637d8ba2bb40d5bfa0fa63dbc56541ac8ddd64
Description
Binding loop detected for property "width"
Steps to reproduce:
import QtQuick 2.1
Flickable {
width: contentWidth
}
Regression in 5.2 following recent v4 changes
Attachments
Issue Links
- relates to
-
QTBUG-85200 QML Flickable: Binding loop detected for property "contentWidth"
-
- Closed
-