Flickable: remove spurious emission of content size changes

If contentWidth or contentHeight is negative (unspecified), Flickable
should not emit contentWidthChanged() or contentHeightChanged() when
its own geometry changes. The value of contentWidth or contentHeight
does not change. It remains negative (unspecified).

Change-Id: Iad478d11e2e4370d2e94abe84cfd62d144e23dd9
Task-number: QTBUG-35038
Reviewed-by: Robin Burchell <robin.burchell@viroteck.net>
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>